--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "midiinfo"
 dynamic = ["version"]
-dependencies = ["pygame"]
+dependencies = ["python-rtmidi"]
 requires-python = ">= 3.9"
 
 [project.scripts]
