--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,18 @@
-[build-system]
-requires = ["setuptools >= 61.0"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "midiinfo"
-dynamic = ["version"]
-dependencies = ["python-rtmidi"]
-requires-python = ">= 3.9"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <you@example.com>"]
+readme = "README.md"
 
-[project.scripts]
+[tool.poetry.dependencies]
+python = "^3.9"
+python-rtmidi = "^1.5.8"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
 midiinfo = "midiinfo:main_cli"
