--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9"
 python-rtmidi = "^1.5.8"
+fire = "^0.5.0"
+pygame = "^2.5.2"
 
 
 [build-system]
